scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/circular1.errors.txt
/a.ts(1,15): error TS2303: Circular definition of import alias 'A'.
/b.ts(1,15): error TS2303: Circular definition of import alias 'A'.


==== /a.ts (1 errors) ====
    export type { A } from './b';
                  ~
!!! error TS2303: Circular definition of import alias 'A'.
    
==== /b.ts (1 errors) ====
    export type { A } from './a';
                  ~
!!! error TS2303: Circular definition of import alias 'A'.
    